# docopt.rs

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  session.vim
completions/: docopt-wordlist.bash
docopt_macros/: Cargo.toml
docopt_macros/examples/: add.rs  cp.rs  macro.rs  rustc.rs
docopt_macros/src/: macro.rs
examples/: add.rs  cargo.rs  cp.rs  decode.rs  hashmap.rs  macro.rs  no_macro.rs  optional_command.rs  rustc.rs  verbose_multiple.rs
scripts/: mk-testcases
src/: dopt.rs  errors.rs  lib.rs  macro.rs  parse.rs  synonym.rs  testcases.rs  utils.rs  wordlist.rs
src/test/: mod.rs  suggestions.rs  testcases.docopt  testcases.rs
