[package]
name = "docopt"
version = "1.1.0"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "Command line argument parsing."
documentation = "http://burntsushi.net/rustdoc/docopt/"
homepage = "https://github.com/docopt/docopt.rs"
repository = "https://github.com/docopt/docopt.rs"
readme = "README.md"
keywords = ["docopt", "argument", "command", "argv"]
categories = ["command-line-interface"]
license = "Unlicense/MIT"
exclude = ["/.travis.yml", "/Makefile", "/ctags.rust", "/scripts/*", "/session.vim"]
edition = "2018"

[lib]
name = "docopt"

[[bin]]
name = "docopt-wordlist"
path = "src/wordlist.rs"
doc = false
test = false

[dependencies]
lazy_static = "1.3"
regex = "1.1.5"
serde = { version = "1.0", features = ["derive"] }
strsim = "0.9"
