[package]
name = "docopt_macros"
version = "0.6.61"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "Docopt macro for command line argument parsing."
documentation = "http://burntsushi.net/rustdoc/docopt/"
homepage = "https://github.com/docopt/docopt.rs"
repository = "https://github.com/docopt/docopt.rs"
readme = "../README.md"
keywords = ["docopt", "argument", "command", "argv"]
license = "Unlicense/MIT"

[lib]
name = "docopt_macros"
path = "src/macro.rs"
plugin = true

[dependencies.docopt]
path = ".."
version = "*"

[dev-dependencies]
rustc-serialize = "0.3"
