[package]
name = "docopt_macros"
version = "0.8.1"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "Docopt macro for command line argument parsing."
documentation = "http://burntsushi.net/rustdoc/docopt/"
homepage = "https://github.com/docopt/docopt.rs"
repository = "https://github.com/docopt/docopt.rs"
readme = "../README.md"
keywords = ["docopt", "argument", "command", "argv"]
license = "Unlicense/MIT"

[lib]
name = "docopt_macros"
path = "src/macro.rs"
plugin = true

[dependencies.docopt]
path = ".."
version = "0.8.0"

[dev-dependencies]
serde = "1.0"
serde_derive = "1.0"
